<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_deroulant_accueil" />
        <item
            android:id="@+id/nav_frigo"
            android:icon="@drawable/ic_food"
            android:title="@string/menu_deroulant_frigo" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_deroulant_recettes" />
        <item
            android:id="@+id/nav_roucette"
            android:icon="@drawable/ic_nature_black_24dp"
            android:title="@string/menu_deroulant_roucette" />
    </group>

    <item android:title="@string/menu_deroulant_contact">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_email"
                android:title="@string/menu_deroulant_email" />
        </menu>
    </item>

</menu>
