<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu_fonction.MonFrigo.MonFrigoTypeChoice">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_oeuf"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/choix_ingredient_type_oeufsetfromage"/>

            <Button
                android:id="@+id/btn_cereal"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/choix_ingredient_type_céréales" />

            <Button
                android:id="@+id/btn_viande"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/choix_ingredient_type_viandes" />

            <Button
                android:id="@+id/btn_fruit"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/choix_ingredient_type_fruits" />

            <Button
                android:id="@+id/btn_legume"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/choix_ingredient_type_légumes" />

            <Button
                android:id="@+id/btn_condiment"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/choix_ingredient_type_condiments" />

            <Button
                android:id="@+id/btn_retour_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/bouton_retour" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>